--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,17 +26,14 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
     <Header title={SITE_TITLE} />
     <main class="pt-[56px]">
       <Masterhead />
-      <h1 class="font-mplus text-center">What I take</h1>
+      <h1 class="font-mplus text-center">Why did i made this?</h1>
       <Content>
         <section>
           <p class="mb-8 indent-4">
-            My hobby as a computer science student is photography, I shoot with
-            my Cannon EOS RP lens EF 50mm f/1.8 STM. I also use my iPhone 11 and
-            Canon EOS Kiss lens EF 50 mm f/1.8 II (Film camera). As a result,
-            I've been working hard to improve my photography skills. Every time
-            I take a new photograph, I try to learn something news. And I take a
-            new photo every day. So, here is a photo gallery of my photos.
-            Finally, I'd like to share my photography portfolio.
+            Well, think of it as my own little online scrapbook. Life zooms by so fast, and I wanted a cozy spot to capture the bits and pieces that make it special. 
+            This photo album is like a digital time capsule—a way to gather up the snapshots and memories that might otherwise slip away. 
+            It's not just about the photos; it's about the stories behind them, the goofy smiles, the adventures. So, consider this your backstage pass to my world, 
+            where every pic has a tale, and every click is a step into my journey. but ofc i won't put here all of my pic's!
             <a
               href={HOMEPAGE_URL}
               class="inline-flex items-center gap-1 indent-1 text-orange-400 hover:underline underline-offset-2"
