--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,13 +14,13 @@ import ThemeToggle from './ThemeToggleButton'
           class="font-semibold tracking-tighter p-2 font-mplus text-lg group-hover:text-orange-500"
         >
           <GhostIcon />
-          Noppakorn Kaewsalabnil
+          thankyou for your time
         </h2>
       </a>
       <div class="items-center gap-6 hidden md:flex">
         <HeaderLink href={HOMEPAGE_URL}>About</HeaderLink>
         <HeaderLink
-          href="https://github.com/PunGrumpy/PunGrumpy-Takes"
+          href="https://github.com/Scorpyyy/Photo-albummm"
           target="_blank"
         >
           <IoLogoGithub /> Source
