--- a/src/components/Masthead.astro
+++ b/src/components/Masthead.astro
@@ -2,20 +2,20 @@
   <div class="absolute w-full h-full overflow-hidden">
     <video
       class="absolute inset-0 min-w-full h-full object-cover opacity-30"
-      poster="/Masthead-poster.png"
+      poster="/cover.jpg"
       autoplay="autoplay"
       muted="muted"
       loop="loop"
       playsinline
     >
-      <source src={'/Masthead.webm'} type="video/webm; codecs=vp9" />
+      <source src={'/cover.jpg'} type="video/webm; codecs=vp9" />
       <source src={'/Masthead.mp4'} type="video/mp4; codecs=hvc1" />
     </video>
   </div>
   <div class="z-10 text-center px-8 drop-shadow-lg shadow-black">
     <div class="uppercase text-sm mb-4">Welcome to</div>
     <div class="text-4xl font-mplus font-medium">
-      A curated list of the photos I <span class="text-orange-500">take</span>
+      My Photo Album | <span class="text-orange-500">Journal</span>
     </div>
   </div>
 </section>
