--- a/src/components/Masthead.astro
+++ b/src/components/Masthead.astro
@@ -15,7 +15,7 @@
   <div class="z-10 text-center px-8 drop-shadow-lg shadow-black">
     <div class="uppercase text-sm mb-4">Welcome to</div>
     <div class="text-4xl font-mplus font-medium">
-      My Photo Album | <span class="text-orange-500">Journal</span>
+      My Photo Album | <span class="text-orange-500">Journal</span> |
     </div>
   </div>
 </section>
