--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,10 +30,10 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
       <Content>
         <section>
           <p class="mb-8 indent-4">
-            Well, think of it as my own little online scrapbook. Life zooms by so fast, and I wanted a cozy spot to capture the bits and pieces that make it special. 
-            This photo album is like a digital time capsule—a way to gather up the snapshots and memories that might otherwise slip away. 
-            It's not just about the photos; it's about the stories behind them, the goofy smiles, the adventures. So, consider this your backstage pass to my world, 
-            where every pic has a tale, and every click is a step into my journey. but ofc i won't put here all of my pic's!
+            Well, it's kind of like my own little online scrapbook. Life goes by so fast, you know? I just wanted a cozy place to collect the moments that make it special. 
+            This photo album is my digital time capsule—a way to grab hold of snapshots and memories before they slip away. It's not just about the pictures; it's about the stories behind them, 
+            the goofy smiles, the adventures. So, think of it as your backstage pass to my world. Every pic here has a tale, and every click is a step into my journey. 
+            Of course, I won't be sharing all my pics—gotta keep some things just for me!
             <a
               href={HOMEPAGE_URL}
               class="inline-flex items-center gap-1 indent-1 text-orange-400 hover:underline underline-offset-2"
