--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import ThemeToggle from './ThemeToggleButton'
           class="font-semibold tracking-tighter p-2 font-mplus text-lg group-hover:text-orange-500"
         >
           <GhostIcon />
-          thankyou for your time
+          use phone for better view!
         </h2>
       </a>
       <div class="items-center gap-6 hidden md:flex">
