Title changea bit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
           <p class="mb-8 indent-4">
             Well, it's kind of like my own little online scrapbook. Life goes by so fast, you know? I just wanted a cozy place to collect the moments that make it special. 
             This photo album is my digital time capsule—a way to grab hold of snapshots and memories before they slip away. It's not just about the pictures; it's about the stories behind them, 
-            the goofy smiles, the adventures. So, think of it as your backstage pass to my world. Every pic here has a tale, and every click is a step into my journey. 
+            the goofy smiles, the adventures, Every pic here has a tale, and every scroll is a step into my journey. 
             Of course, I won't be sharing all my pics—gotta keep some things just for me, this site is more better with phone!
             <a
               href={HOMEPAGE_URL}
