--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const today = new Date()
 
 <footer class="text-zinc-500 p-4 text-center">
   &copy; {today.getFullYear()}
-  <a href="https://arlxxjamss.web.app" target="_blank">Arlix James</a>. All
+  <a href="https://arlx-album.vercel.app/" target="_blank">Arlix James</a>. All
   rights reserved.
 </footer>
 <style>
