--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,12 +34,13 @@ const posts = (await Astro.glob('./posts/*.md')).sort(
             This photo album is my digital time capsule—a way to grab hold of snapshots and memories before they slip away. It's not just about the pictures; it's about the stories behind them, 
             the goofy smiles, the adventures, Every pic here has a tale, and every scroll is a step into my journey. 
             Of course, I won't be sharing all my pics—gotta keep some things just for me, this site is more better with phone!
-            <a
+            <!-- enable this sht if u are not insecure about ur self hhaha aj<a 
               href={HOMEPAGE_URL}
               class="inline-flex items-center gap-1 indent-1 text-orange-400 hover:underline underline-offset-2"
             >
               Learn more about me<IoArrowForward className="inline-flex" />
             </a>
+            -->
           </p>
         </section>
         <section>
